# Smart-outdoor

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  deploy_cloud.py  docker-compose.middleware.yml  docker-compose.yml  rebuilt.cmd  rebuilt.ps1
.claude/: CLAUDE.md  (+1 more)
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/features/agent_tools/: __init__.py  search.py  transport.py  weather.py
backend/app/features/auth/: router.py  schemas.py  service.py
backend/app/features/geo/: __init__.py  amap_reverse_geocode.py
backend/config/: app.local.env.example
backend/docs/: US-01_API_CONTRACT.md  US-01_DATABASE_DESIGN.md  US-02_PROFILE_AND_ABILITY_DESIGN.md
backend/scripts/: migrate_assets_to_cos.py
backend/tests/: conftest.py
backend/tests/agent_tools/: test_search_tool.py  test_transport_tool.py  test_weather_tool.py
backend/tests/auth/: test_auth_api.py  test_auth_service.py
backend/tests/core/: test_config.py
backend/tests/geo/: test_amap_reverse_geocode.py
backend/tests/llm/: test_openai_provider.py  test_provider.py
backend/tests/routes/: test_route_list_detail_api.py  test_route_upload_api.py  test_track_parser.py  upload_helpers.py
backend/tests/storage/: test_storage_service.py
backend/tests/trip_plans/: test_agent_workflow_units.py  test_evaluator.py  test_route_plan_snapshots_api.py  test_route_retrieval.py  test_trip_plan_agent_api.py
backend/tests/users/: test_activity_ability_api.py
backend/utils/: geo.py
(+179 files in other folders)
